--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,10 +45,10 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- Magnific Popup core CSS file -->
-<!-- <link rel="stylesheet" href="/magnific-popup/magnific-popup.css"> -->
+<link rel="stylesheet" href="/magnific-popup/magnific-popup.css">
 
 <!-- Magnific Popup core JS file -->
-<!-- <script src="/magnific-popup/jquery.magnific-popup.js"></script> -->
+<script src="/magnific-popup/jquery.magnific-popup.js"></script>
 
 <!-- Slick -->
 <!--- Main CSS that handles all the functionality --->
