--- a/_includes/gallery-mana.html
+++ b/_includes/gallery-mana.html
@@ -1,5 +1,5 @@
 <!-- Popup Gallery -->
-<!-- <section class="flex gallery parent-container">
+<section class="flex gallery parent-container">
   {% for item in page.gallery %}
   <a href="{{ item.image_path }}" class="mx-2 w-[90%] sm:w-[60%] md:w-[40%] lg:w-[30%] xl:w-[20%] shrink-0 h-[65vh]">
     <div class="bg-image-style w-full shrink-0 h-[65vh]"
@@ -7,7 +7,7 @@
     </div>
   </a>
   {% endfor %}
-</section> -->
+</section>
 
 <!-- No Popup Gallery -->
 <section class="flex gallery">
