--- a/_includes/hero-banner-course.html
+++ b/_includes/hero-banner-course.html
@@ -1,12 +1,13 @@
-<section class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center {{page.heading.overlay_style}}" style="background-image: url('{{page.heading.background_image}}')">
+<section
+    class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center {{page.heading.overlay_style}}"
+    style="background-image: url('{{page.heading.background_image}}')">
     <div>
         <h2 class="heading-lg-sans">{{page.heading.title}}</h2>
         <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
         <p class="uppercase">{{page.heading.description}}</p>
         <a href="{{page.heading.button-enroll.url}}" class="button m-4">{{page.heading.button-enroll.text}}</a>
         {% if page.heading.button-video.show == true %}
-        <div class="button open-video-btn cursor-pointer">{{page.heading.button-video.text}}</div>
+        <div class="button cursor-pointer">{{page.heading.button-video.text}}</div>
         {% endif %}
     </div>
 </section>
-  
