--- a/_includes/hero-banner-course.html
+++ b/_includes/hero-banner-course.html
@@ -6,8 +6,22 @@
         <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
         <p class="uppercase">{{page.heading.description}}</p>
         <a href="{{page.heading.button-enroll.url}}" class="button m-4">{{page.heading.button-enroll.text}}</a>
+        
         {% if page.heading.button-video.show == true %}
-        <div class="button cursor-pointer">{{page.heading.button-video.text}}</div>
+        
+        <button id="openModalBtn" class="button cursor-pointer">{{page.heading.button-video.text}}</button>
+
+        <div id="videoModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <video controls>
+                    <source src="{{page.heading.button-video.url}}"
+                        type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+
         {% endif %}
     </div>
 </section>
