--- a/style.css
+++ b/style.css
@@ -325,6 +325,49 @@
         overflow: hidden;
     }
 
+    .modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        overflow: auto;
+        /* Enable scrolling if the content is too tall */
+    }
+
+    .modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 95vw; /* Set a larger maximum width for the modal content in viewport units */
+        max-height: 95vh; /* Set a larger maximum height for the modal content in viewport units */
+        width: auto;
+      }
+
+    .close {
+        color: var(--light);
+        font-size: 3.5rem;
+        font-weight: lighter;
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        cursor: pointer;
+    }
+
+    /* Make the video responsive */
+    video {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        /* Ensure the video doesn't exceed its natural size */
+        max-height: 100%;
+        object-fit: contain;
+        /* Maintain the aspect ratio while fitting within the container */
+    }
+
     /* Slick Container */
     .slick-dots li {
         margin: 0 7px;
