--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,3 +1,17 @@
-<section class="min-h-[70vh] bg-image-style bg-overlay flex items-center justify-center {{page.video.overlay_style}}" style="background-image: url('{{page.video.video_thumbnail}}'); background-position: {{page.video.image_focus}};">
-    <i class="fa-solid fa-circle-play text-dark/70 text-6xl cursor-pointer"></i>
+<section class="min-h-[70vh] bg-image-style bg-overlay flex items-center justify-center {{page.video.overlay_style}}"
+    style="background-image: url('{{page.video.video_thumbnail}}'); background-position: {{page.video.image_focus}};">
+    <button id="openModalBtn">
+        <i class="fa-solid fa-circle-play text-dark/70 text-6xl cursor-pointer"></i>
+    </button>
+
+    <div id="videoModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <video controls>
+                <source src="{{page.heading.button-video.url}}" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+
 </section>
