--- a/_includes/hero-banner-course.html
+++ b/_includes/hero-banner-course.html
@@ -9,9 +9,9 @@
         
         {% if page.heading.button-video.show == true %}
         
-        <button id="openModalBtn" class="button cursor-pointer">{{page.heading.button-video.text}}</button>
+        <button id="openModalBtnBanner" class="button cursor-pointer">{{page.heading.button-video.text}}</button>
 
-        <div id="videoModal" class="modal">
+        <div id="videoModalBanner" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <video controls>
