--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -22,7 +22,7 @@
             <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
         </div>
     </div>
-    <div class="p-2 border-t-[0.5px] border-feature">
+    <div class="p-4">
         <p class="text-center text-[0.9rem]">Crafted & Developed by <a href="https://embodiedcreativeagency.com" target="_blank">Embodied Creative</a></p>
     </div>
 </footer>
