--- a/_includes/about-mana-and-ltm.html
+++ b/_includes/about-mana-and-ltm.html
@@ -3,7 +3,7 @@
     <div class="bg-image-style md:mr-10p" style="background-image: url('{{page.about.featured_image}}'); background-position: bottom"></div>
 
     <!-- Text -->
-    <div class="md:col-span-2 p-5p md:p-0 mt-10p md:mt-0 border-t border-feature md:border-none">
+    <div class="md:col-span-2 p-5p md:p-0 mt-10p md:mt-0">
         <h2 class="text-md-serif text-feature capitalize">{{page.about.heading}}</h2>
         <div id="aboutDescription" class="description-container overflow-hidden">
             <p class="description-content">{{page.about.description_html}}</p>
