--- a/_includes/inside-the-course.html
+++ b/_includes/inside-the-course.html
@@ -8,7 +8,7 @@
         {% for item in page.inside-the-course.module %}
         <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item {% endif %}">
             <button @click="open = ! open" class="flex justify-between w-full">
-                <h3 class="mr-8">{{item.title}}</h3>
+                <h3 class="mr-8 text-left">{{item.title}}</h3>
 
                 <span x-show="!open">→</span>
                 <span x-show="open">&nbsp;&nbsp;↓</span>
