--- a/_includes/start-here.html
+++ b/_includes/start-here.html
@@ -1,7 +1,7 @@
 <section class="bg-image-style bg-overlay py-10p px-5p md:p-10p" style="background-image: url('{{page.start-here.background_image}}');">
     <h2 class="text-md-serif text-feature mb-4">Start Here</h2>
     <h3 class="heading-md-sans mb-4">{{page.start-here.heading}}</h3>
-    <div>
+    <div class="mb-2">
         <p>{{page.start-here.description_html}}</p>
     </div>
     <div class="grid md:grid-cols-3">
