--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1250,6 +1250,9 @@ video {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
