--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -13,7 +13,7 @@
                 {% assign paragraphs = item.answer_html | split: '<p>' %}
                     {% for paragraph in paragraphs %}
                     {% if paragraph != '' %}
-                <p class="mr-8 mt-4 italic {% if forloop.last %} last-paragraph {% endif %}">{{ paragraph | strip_html }}</p>
+                <p class="mr-8 mt-4 italic {% if forloop.last %} last-paragraph {% endif %}">{{ paragraph }}</p>
                 {% endif %}
                 {% endfor %}
             </div>
