--- a/style.css
+++ b/style.css
@@ -348,10 +348,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        max-width: 95vw; /* Set a larger maximum width for the modal content in viewport units */
-        max-height: 95vh; /* Set a larger maximum height for the modal content in viewport units */
+        max-width: 95vw;
+        /* Set a larger maximum width for the modal content in viewport units */
+        max-height: 95vh;
+        /* Set a larger maximum height for the modal content in viewport units */
         width: auto;
-      }
+    }
 
     .close {
         color: var(--light);
