--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -965,6 +965,9 @@ video {
 .fixed {
   position: fixed;
 }
+.absolute {
+  position: absolute;
+}
 .left-0 {
   left: 0px;
 }
@@ -1188,6 +1191,9 @@ video {
 .overflow-hidden {
   overflow: hidden;
 }
+.rounded-none {
+  border-radius: 0px;
+}
 .border {
   border-width: 1px;
 }
@@ -1260,9 +1266,6 @@ video {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -1308,6 +1311,10 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1349,6 +1356,10 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .uppercase {
   text-transform: uppercase;
