--- a/_includes/form-ebook.html
+++ b/_includes/form-ebook.html
@@ -1,21 +1,47 @@
 <!-- Ebook -->
-<form>
-    <div class="grid md:grid-cols-7 gap-2">
-        <div class="md:col-span-2">
-            <input type="text" id="first-name" name="first-name" placeholder=" First Name"
-                class="bg-transparent border border-white w-full">
-        </div>
+<div id="mc_embed_shell">
 
-        <div class="md:col-span-2">
-            <input type="text" id="last-name" name="last-name" placeholder=" Last Name"
-                class="bg-transparent border border-white w-full">
-        </div>
+    <div id="mc_embed_signup">
+        <form
+            action="https://manamei.us19.list-manage.com/subscribe/post?u=375b24e2d707297f066e35f7e&amp;id=8e7408ea22&amp;f_id=00130de4f0"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_self" novalidate="">
+            <div id="mc_embed_signup_scroll" class="grid md:grid-cols-7 gap-2">
 
-        <div class="md:col-span-2">
-            <input type="email" id="email" name="email" placeholder=" Email"
-                class="bg-transparent border border-white w-full">
-        </div>
+                <!-- First Name -->
+                <div class="mc-field-group md:col-span-2">
+                    <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full"
+                        placeholder=" First Name" id="mce-FNAME" required="" value="">
+                </div>
 
-        <button type="submit" class="button-form">Submit</button>
+                <!-- Last Name -->
+                <div class="mc-field-group md:col-span-2">
+                    <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full"
+                        placeholder=" Last Name" id="mce-LNAME" required="" value="">
+                </div>
+
+                <!-- Email -->
+                <div class="mc-field-group md:col-span-2">
+                    <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full"
+                        placeholder=" Email" id="mce-EMAIL" required="" value="">
+                </div>
+
+                <!-- Button -->
+                <div class="clear col-span-1">
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                        class="button rounded-none py-0 cursor-pointer w-full" value="Submit">
+                </div>
+
+                <div hidden=""><input type="hidden" name="tags" value="11197988"></div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+
+                <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+                        name="b_375b24e2d707297f066e35f7e_8e7408ea22" tabindex="-1" value=""></div>
+
+            </div>
+        </form>
     </div>
-</form>
+</div>
