--- a/_includes/cookie-banner.html
+++ b/_includes/cookie-banner.html
@@ -1,4 +1,4 @@
-<div id="cookie-notice" class="p-8 border-t border-feature bg-black/90 fixed bottom-0 z-20">
+<div id="cookie-notice" class="cookie-banner">
     <div class="flex justify-between">
         <div class="text-center">
             <span>I value your privacy, and to provide the best possible experience, my website uses cookies. By
