--- a/_includes/about-mana.html
+++ b/_includes/about-mana.html
@@ -1,4 +1,4 @@
-<section class="section-padding bg-image-style" style="background-image: url('{{page.about-section.background_image}}');">
+<section class="section-padding bg-image-style bg-overlay {{page.about-section.background-image.overlay_style}}" style="background-image: url('{{page.about-section.background-image.background_image}}');">
     <h1 class="text-lg-serif text-feature">{{page.about-section.heading}}</h1>
     <div class="md:w-[80%]">
         <p>{{page.about-section.description_html}}</p>
