--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -776,6 +776,18 @@ li:last-child {
   margin-left: 1rem;
   list-style-type: disc;
 }
+/* Cookie Banner */
+.cookie-banner {
+  position: fixed;
+  bottom: 0px;
+  z-index: 20;
+  width: 100%;
+  border-top-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(237 213 135 / var(--tw-border-opacity));
+  background-color: rgb(0 0 0 / 0.9);
+  padding: 2rem;
+}
 /* Dropdown Menu */
 .dropdown-menu {
   border-width: 1px;
@@ -973,9 +985,6 @@ video {
 }
 .top-\[50\%\] {
   top: 50%;
-}
-.bottom-0 {
-  bottom: 0px;
 }
 .z-20 {
   z-index: 20;
@@ -1242,9 +1251,6 @@ video {
 .bg-transparent {
   background-color: transparent;
 }
-.bg-black\/90 {
-  background-color: rgb(0 0 0 / 0.9);
-}
 .bg-\[url\(\'\/uploads\/backgrounds\/manamei-4\.jpg\'\)\] {
   background-image: url('/uploads/backgrounds/manamei-4.jpg');
 }
@@ -1290,9 +1296,6 @@ video {
 .p-5p {
   padding: 5%;
 }
-.p-8 {
-  padding: 2rem;
-}
 .px-10p {
   padding-left: 10%;
   padding-right: 10%;
@@ -1309,6 +1312,10 @@ video {
   padding-left: 5%;
   padding-right: 5%;
 }
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .py-10p {
   padding-top: 10%;
   padding-bottom: 10%;
@@ -1316,10 +1323,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1362,10 +1365,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 .uppercase {
   text-transform: uppercase;
