--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1278,6 +1278,15 @@ video {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-51\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-51.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-52\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-52.jpg');
+}
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
