--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1287,6 +1287,9 @@ video {
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-55\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-55.jpg');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
