updated tag value in form-waitlist

--- a/_includes/form-waitlist.html
+++ b/_includes/form-waitlist.html
@@ -29,7 +29,8 @@
                         value="Submit">
                 </div>
 
-                <div hidden=""><input type="hidden" name="tags" value="11197996"></div>
+                <!-- Mana decided that people who opt-in to join the waitlist will receive the brochure and therefore the tag value is for "mentorship-brochure" instead of "mentorship-waitlist" -->
+                <div hidden=""><input type="hidden" name="tags" value="11197992"></div>
                 <div id="mce-responses" class="clear">
                     <div class="response" id="mce-error-response" style="display: none;"></div>
                     <div class="response" id="mce-success-response" style="display: none;"></div>
