--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,4 +1,4 @@
-<form>
+<form id="contact" name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit">
     <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
             <input type="text" id="first-name" name="first-name">
