--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,4 +1,5 @@
-<form id="contact" name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit">
+<form name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
+    <input class="hidden" name="bot-field">
     <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
             <input type="text" id="first-name" name="first-name">
@@ -17,7 +18,7 @@
     </div>
 
     <div>
-        <textarea id="message" name="message" rows="4" placeholder=" Message" class="border border-light"></textarea>
+        <textarea id="message" name="message" rows="4" placeholder="Message" class="border border-light p-2"></textarea>
     </div>
 
     <div class="flex justify-end">
