--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -985,6 +985,12 @@ video {
 .top-\[50\%\] {
   top: 50%;
 }
+.bottom-10p {
+  bottom: 10%;
+}
+.top-10p {
+  top: 10%;
+}
 .z-20 {
   z-index: 20;
 }
@@ -1073,6 +1079,15 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .block {
   display: block;
 }
@@ -1117,6 +1132,9 @@ video {
 }
 .h-full {
   height: 100%;
+}
+.h-32 {
+  height: 8rem;
 }
 .max-h-16 {
   max-height: 4rem;
@@ -1208,6 +1226,9 @@ video {
 .rounded-none {
   border-radius: 0px;
 }
+.rounded {
+  border-radius: 0.25rem;
+}
 .border {
   border-width: 1px;
 }
@@ -1238,6 +1259,10 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-black {
   --tw-bg-opacity: 1;
@@ -1326,6 +1351,14 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1368,6 +1401,9 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.font-semibold {
+  font-weight: 600;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1382,6 +1418,9 @@ video {
 }
 .leading-7 {
   line-height: 1.75rem;
+}
+.leading-6 {
+  line-height: 1.5rem;
 }
 .text-dark {
   --tw-text-opacity: 1;
