--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -985,12 +985,6 @@ video {
 .top-\[50\%\] {
   top: 50%;
 }
-.bottom-10p {
-  bottom: 10%;
-}
-.top-10p {
-  top: 10%;
-}
 .z-20 {
   z-index: 20;
 }
@@ -1037,6 +1031,13 @@ video {
   margin-top: auto;
   margin-bottom: auto;
 }
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .mb-10p {
   margin-bottom: 10%;
 }
@@ -1058,6 +1059,9 @@ video {
 .ml-4 {
   margin-left: 1rem;
 }
+.mr-2 {
+  margin-right: 0.5rem;
+}
 .mr-20p {
   margin-right: 20%;
 }
@@ -1073,20 +1077,14 @@ video {
 .mt-12 {
   margin-top: 3rem;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
 }
 .block {
   display: block;
@@ -1118,6 +1116,9 @@ video {
 .h-28 {
   height: 7rem;
 }
+.h-32 {
+  height: 8rem;
+}
 .h-\[1\.5rem\] {
   height: 1.5rem;
 }
@@ -1132,9 +1133,6 @@ video {
 }
 .h-full {
   height: 100%;
-}
-.h-32 {
-  height: 8rem;
 }
 .max-h-16 {
   max-height: 4rem;
@@ -1223,11 +1221,11 @@ video {
 .overflow-hidden {
   overflow: hidden;
 }
-.rounded-none {
-  border-radius: 0px;
-}
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-none {
+  border-radius: 0px;
 }
 .border {
   border-width: 1px;
@@ -1259,10 +1257,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-black {
   --tw-bg-opacity: 1;
@@ -1331,6 +1325,10 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
@@ -1347,17 +1345,17 @@ video {
   padding-top: 10%;
   padding-bottom: 10%;
 }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1418,9 +1416,6 @@ video {
 }
 .leading-7 {
   line-height: 1.75rem;
-}
-.leading-6 {
-  line-height: 1.5rem;
 }
 .text-dark {
   --tw-text-opacity: 1;
