--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -2,7 +2,7 @@
     <input class="hidden" name="bot-field">
     <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
-            <input type="text" id="first-name" name="first-name">
+            <input type="text" id="first-name" name="first-name" required>
             <label for="first-name"> First Name:</label>
         </div>
 
@@ -14,11 +14,11 @@
 
     <div class="mb-4">
         <input type="email" id="email" name="email">
-        <label for="email"> Email:</label>
+        <label for="email" required> Email:</label>
     </div>
 
     <div>
-        <textarea id="message" name="message" rows="4" placeholder="Message" class="border border-light p-2"></textarea>
+        <textarea id="message" name="message" required rows="4" placeholder="Message" class="border border-light p-2"></textarea>
     </div>
 
     <div class="flex justify-end">
