troubleshooting application email

--- a/_includes/form-waitlist.html
+++ b/_includes/form-waitlist.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <!-- Mana decided that people who opt-in to join the waitlist will receive the brochure and therefore the tag value is for "mentorship-brochure" instead of "mentorship-waitlist" -->
-                <div hidden=""><input type="hidden" name="tags" value="11197992,11202896"></div>
+                <div hidden=""><input type="hidden" name="tags" value="11202896"></div>
                 <div id="mce-responses" class="clear">
                     <div class="response" id="mce-error-response" style="display: none;"></div>
                     <div class="response" id="mce-success-response" style="display: none;"></div>
