--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1361,6 +1361,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -1426,6 +1429,9 @@ input[type="checkbox"]:checked::before {
 }
 .pt-5p {
   padding-top: 5%;
+}
+.pb-5p {
+  padding-bottom: 5%;
 }
 .text-left {
   text-align: left;
