--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1214,6 +1214,9 @@ input[type="checkbox"]:checked::before {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
+.min-h-60 {
+  min-height: 60vh;
+}
 .w-\[10vh\] {
   width: 10vh;
 }
@@ -1363,6 +1366,9 @@ input[type="checkbox"]:checked::before {
 }
 .bg-fixed {
   background-attachment: fixed;
+}
+.bg-\[right\] {
+  background-position: right;
 }
 .p-10 {
   padding: 2.5rem;
@@ -1674,6 +1680,12 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .lg\:bg-\[bottom\] {
+    background-position: bottom;
+  }
+  .lg\:bg-\[right\] {
+    background-position: right;
   }
   .lg\:p-0 {
     padding: 0px;
