--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,7 +1,7 @@
 <section class="py-10p px-5p md:p-10p bg-image-style"
     style="background-image: url('{{page.faq.background-image.background_image}}'); background-position: {{page.faq.background-image.image_focus}};">
     <h2 class="heading-lg-sans text-feature text-center">{{page.faq.heading}}</h2>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu ml-0">
         {% for item in page.faq.questions-and-answers %}
         <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item{% endif %}">
             <button @click="open = ! open" class="flex justify-between w-full">
