--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1153,6 +1153,9 @@ input[type="checkbox"]:checked::before {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-0 {
+  margin-bottom: 0px;
+}
 .block {
   display: block;
 }
@@ -1228,6 +1231,9 @@ input[type="checkbox"]:checked::before {
 .w-full {
   width: 100%;
 }
+.w-\[60\%\] {
+  width: 60%;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -1285,6 +1291,9 @@ input[type="checkbox"]:checked::before {
 .gap-8 {
   gap: 2rem;
 }
+.gap-\[10\%\] {
+  gap: 10%;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1335,6 +1344,9 @@ input[type="checkbox"]:checked::before {
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-\[\/uploads\/images\/manamei-27\.jpg\] {
+  background-color: /uploads/images/manamei-27.jpg;
 }
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
@@ -1464,6 +1476,12 @@ input[type="checkbox"]:checked::before {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-\[1\.25rem\] {
+  font-size: 1.25rem;
+}
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 .uppercase {
   text-transform: uppercase;
