--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1047,14 +1047,44 @@ input[type="checkbox"]:checked::before {
 .absolute {
   position: absolute;
 }
+.relative {
+  position: relative;
+}
+.inset-0 {
+  inset: 0px;
+}
 .left-0 {
   left: 0px;
 }
 .top-\[50\%\] {
   top: 50%;
 }
+.left-\[10\%\] {
+  left: 10%;
+}
+.left-40 {
+  left: 10rem;
+}
+.top-8 {
+  top: 2rem;
+}
+.left-20 {
+  left: 5rem;
+}
+.top-12 {
+  top: 3rem;
+}
+.left-\[5\%\] {
+  left: 5%;
+}
+.top-20 {
+  top: 5rem;
+}
 .z-20 {
   z-index: 20;
+}
+.z-10 {
+  z-index: 10;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -1156,6 +1186,9 @@ input[type="checkbox"]:checked::before {
 .mb-0 {
   margin-bottom: 0px;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
 .block {
   display: block;
 }
@@ -1234,6 +1267,9 @@ input[type="checkbox"]:checked::before {
 .w-\[60\%\] {
   width: 60%;
 }
+.w-auto {
+  width: auto;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -1242,6 +1278,9 @@ input[type="checkbox"]:checked::before {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.list-inside {
+  list-style-position: inside;
 }
 .list-disc {
   list-style-type: disc;
@@ -1348,6 +1387,13 @@ input[type="checkbox"]:checked::before {
 .bg-\[\/uploads\/images\/manamei-27\.jpg\] {
   background-color: /uploads/images/manamei-27.jpg;
 }
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
+}
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
 }
@@ -1378,8 +1424,14 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-cover {
+  background-size: cover;
+}
 .bg-fixed {
   background-attachment: fixed;
+}
+.bg-center {
+  background-position: center;
 }
 .p-10 {
   padding: 2.5rem;
@@ -1395,6 +1447,9 @@ input[type="checkbox"]:checked::before {
 }
 .p-5p {
   padding: 5%;
+}
+.p-8 {
+  padding: 2rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1431,6 +1486,10 @@ input[type="checkbox"]:checked::before {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1482,6 +1541,16 @@ input[type="checkbox"]:checked::before {
 }
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
+}
+.text-\[3rem\] {
+  font-size: 3rem;
+}
+.text-\[2rem\] {
+  font-size: 2rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1608,6 +1677,12 @@ input[type="checkbox"]:checked::before {
   }
 }
 @media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+  .md\:relative {
+    position: relative;
+  }
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1667,6 +1742,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:p-5p {
     padding: 5%;
+  }
+  .md\:p-10 {
+    padding: 2.5rem;
   }
   .md\:px-10p {
     padding-left: 10%;
