--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,27 +1,44 @@
-<form name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
+<form name="contact" method="post" data-netlify="true"
+    action="https://manamei.us19.list-manage.com/subscribe/post?u=375b24e2d707297f066e35f7e&amp;id=8e7408ea22&amp;f_id=00130de4f0"
+    id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate=""
+    onSubmit="submit" data-netlify-honeypot="bot-field">
     <input class="hidden" name="bot-field">
-    <div class="grid sm:grid-cols-2 gap-8 mb-4">
-        <div>
-            <input type="text" id="first-name" name="first-name" required>
+    <div id="mc_embed_signup_scroll" class="grid sm:grid-cols-2 gap-8 mb-4">
+
+        <!-- First Name -->
+        <div class="mc-field-group">
+            <input type="text" id="mce-FNAME" name="FNAME" required>
             <label for="first-name"> First Name:</label>
         </div>
 
-        <div>
-            <input type="text" id="last-name" name="last-name">
+        <!-- Last Name -->
+        <div class="mc-field-group">
+            <input type="text" id="mce-LNAME" name="LNAME">
             <label for="last-name"> Last Name:</label>
         </div>
     </div>
 
-    <div class="mb-4">
-        <input type="email" id="email" name="email">
+    <!-- Email -->
+    <div class="mc-field-group mb-4">
+        <input type="email" id="mce-EMAIL" name="EMAIL">
         <label for="email" required> Email:</label>
     </div>
 
     <div>
-        <textarea id="message" name="message" required rows="4" placeholder="Message" class="border border-light p-2"></textarea>
+        <textarea id="message" name="message" required rows="4" placeholder="Message"
+            class="border border-light p-2"></textarea>
     </div>
 
     <div class="flex justify-end">
-        <button type="submit" class="link mt-4  mb-12 sm:mb-0">Send</button>
+        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="link mt-4 mb-12 sm:mb-0">Send</button>
     </div>
+
+    <div hidden=""><input type="hidden" name="tags" value="379119"></div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display: none;"></div>
+        <div class="response" id="mce-success-response" style="display: none;"></div>
+    </div>
+
+    <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+            name="b_375b24e2d707297f066e35f7e_8e7408ea22" tabindex="-1" value=""></div>
 </form>
