--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1749,6 +1749,9 @@ input[type="checkbox"]:checked::before {
   .lg\:flex {
     display: flex;
   }
+  .lg\:grid {
+    display: grid;
+  }
   .lg\:hidden {
     display: none;
   }
